# PyBACCHUS

./: BACCHUS.py  README.md  Results.py  Star.py  Untitled.ipynb  abu.py  babsma_com.py  bsyn_com.py  helper_methods.py  pyproject.toml  requirements.txt  test.abu  test.eqw  test.py  testing.ipynb
.ipynb_checkpoints/: BACCHUS-checkpoint.py  Results-checkpoint.py  Star-checkpoint.py  bsyn_com-checkpoint.py  elements_wln-checkpoint.py  eqwidt_com-checkpoint.py  helper_methods-checkpoint.py  tab-checkpoint.py  test-checkpoint.abu  testing-checkpoint.ipynb
PyBACCHUS/: Results.py  Star.py  elements_wln.py  eqw.py  eqwidt_com.py  init_com.py  linelists.py  paper_style.mplstyle  par.py  plt.py  results.py  star.py  stellar_parameters.py  tab.py
PyBACCHUS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
PyBACCHUS/.ipynb_checkpoints/: __init__-checkpoint.py  abu-checkpoint.py  babsma_com-checkpoint.py  bacchus-checkpoint.py  bsyn_com-checkpoint.py  elements_wln-checkpoint.py  eqw-checkpoint.py  eqwidt_com-checkpoint.py  helper_methods-checkpoint.py  init_com-checkpoint.py  linelists-checkpoint.py  par-checkpoint.py  plt-checkpoint.py  stellar_parameters-checkpoint.py  tab-checkpoint.py
tests/: testing.ipynb
tests/.ipynb_checkpoints/: testing-checkpoint.ipynb
