[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyBACCHUS"
dynamic = ["version"]

dependencies = [
"math",
"glob",
"subprocess",
"os",
"numpy",
"pandas",
"astropy",
"matplotlib",
"pytest",
"warnings",
"random",
"sphinx-rtd-theme==3.0.2"
]

[tool.setuptools.dynamic]
version = {attr = "PyBACCHUS.__version__"}

[tool.setuptools.packages]
find = {}
