[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">= 3.10"
name = "PyBACCHUS"
version = "1.1.0"

dependencies = [
"numpy",
"pandas",
"astropy",
"matplotlib",
"sphinx-rtd-theme==3.0.2"
]

[tool.setuptools.dynamic]
version = {attr = "PyBACCHUS.__version__"}

[tool.setuptools.packages]
find = {}
